--- a/v19.1/ko/install-cockroachdb.html
+++ b/v19.1/ko/install-cockroachdb.html
@@ -1,5 +1,5 @@
 ---
-title: Install CockroachDB
+title: 카크로치디비 설치
 summary: Install CockroachDB on Mac, Linux, or Windows. Sign up for product release notes.
 toc: false
 feedback: false
